--- a/Cont.html
+++ b/Cont.html
@@ -279,7 +279,7 @@
         <form action="#" method="post">  
           <input type="text" name="Name" placeholder="Your-Name" required="">
           <input type="email" class="email" name="Email" placeholder="email@company.com" required="">
-          <input type="text" name="text" placeholder="Your-Subject" required="">
+          <input type="text" name="text" placeholder="LUNA 48 ER POWER CAT" required="">
           <textarea name="Message" placeholder="Your-Message" required=""></textarea>
           <div class="read mt-3">
             <a href="#">Submit <span class="btn ml-2"><i class="fas fa-arrow-right" aria-hidden="true"></i></span></a>
