--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ transform:translate(-50%,-50%);
     margin:0;
     font-weight: bold;
 }
-.btn
+#btn-2
 {
     display: inline-block;
     margin-top: 5%;
@@ -240,7 +240,7 @@ transform:translate(-50%,-50%);
             <div class="banner-text">
                 <h2>luna_catamarans</h2>
                 <p>we are here to help you 24*7</p>
-                <a href="contact.html" class="btn" target="_blank">Contact us</a>
+                <a href="contact.html" class="btn" id="btn-2"target="_blank">Contact us</a>
             </div>
         </header>
    
@@ -333,7 +333,7 @@ transform:translate(-50%,-50%);
             </div>
           </div>
         </div>
-      </header>--!>
+      </header>-->
       
     
     <center><h1 class="mt-5">Featured Catamarans</h1></center>
