--- a/demo.html
+++ b/demo.html
@@ -1,1 +1,25 @@
-kjgjkjbjkg;dfnvjdfnvjfvnjd
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <link href="css/newcss.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.css" rel='stylesheet' type='text/css'/>
+    <link href="newStyle.css" rel='stylesheet' type='text/css'/>
+    <link href="css/style.css" rel='stylesheet' type='text/css'/>
+</head>
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-6">
+               <img src="images/hello.jpeg">
+            </div>
+           
+            <div class="col-6 text-right" style="background-image: url('images/bn.jpeg');">
+                <div class="about-right-w3layouts">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vnNiWp1aLY8?autoplay=1&mute=1&playlist=vnNiWp1aLY8&loop=1"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
