--- a/db.html
+++ b/db.html
@@ -1,36 +1,23 @@
-<head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <style>
-      .embed-container { 
-position: relative; 
-padding-bottom: 56.25%; 
-padding-top: 30px; 
-height: 0; 
-overflow: hidden; 
-max-width: 100%; 
-height: auto; 
+<style>
+  .gradient {
+    position: relative;
 }
-
-.embed-container iframe, .embed-container object, .embed-container embed { 
-position: absolute; 
-top: 0; 
-left: 0; 
-width: 100%; 
-height: 100%;
+.gradient:after {
+   
+    color:#000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
-
-  </style>
-</head>
-
-<section class="d5-d13 c5-c13 b5-b13 a5-a13 video">
-
-    <div class='embed-container'>
-       <iframe src='http://player.vimeo.com/video/69252713' frameborder='0'
-       webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-    </div>
- 
- </section>
- 
+.gradient h2 {
+    color: #117FB2;
+    -webkit-mask-box-image: -webkit-gradient(linear,
+                left top, left bottom,
+                color-stop(20%,rgba(0,0,0,1)),
+                color-stop(100%,rgba(0,0,0,0)));
+}
+</style>
+<div class="gradient">
+  <h2>Hello</h2>
+</div>
