--- a/demo.html
+++ b/demo.html
@@ -1,27 +1,21 @@
 <style>
-    #thumbwrap {
-	position:relative;
-	margin:75px auto;
-	width:252px; height:252px;
+	* {padding:0;margin:0;box-sizing:border-box;}
+#video {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	height: 0;
 }
-.thumb img { 
-	border:1px solid #000;
-	margin:3px;
-	float:left;
-}
-.thumb span { 
-	position:absolute;
-	visibility:hidden;
-}
-.thumb:hover, .thumb:hover span { 
-	visibility:visible;
-	top:0; left:250px; 
-	z-index:1;
+#video iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
+
 </style>
-<div id="thumbwrap">
-    <a class="thumb" href="#"><img src="images/1.jpeg" alt=""><span><img src="images/jamie1big.jpg" alt=""></span></a>
-    
-    </div>
-    
+
+	<div id="video">
+		<iframe width="100%" height="100%" src="https://www.youtube.com/embed/OycYHUdAWfQ?autoplay=1&mute=1&playlist=OycYHUdAWfQ&loop=1" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+	</div>
