--- a/purchase.html
+++ b/purchase.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" type="text/css" href="web.css">
     <link href="//fonts.googleapis.com/css?family=Josefin+Sans:100,100i,300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800" rel="stylesheet">
+    </head>
     <body>
         <div class="slide-window">
             <div class="slide-wrapper" style="width: 300%;">
@@ -90,14 +91,14 @@
                             <div class="col-lg-7 top-content-right">
                                 <div class="row">
                                     <div class="col-md-6 callnumber text-left">
-                                        <h6>Call Us : <span>1234567890</span></h6>
+                                        <h6>Call Us : <span>+351 915 828 245</span></h6>
                                     </div>
                                     <div class="col-md-6 top-social-icons p-0">
                                         <ul class="social-icons d-flex justify-content-end">
-                                            <li class="mr-1"><a href="#"><span class="fab fa-facebook-f"></span></a></li>
-                                            <li class="mx-1"><a href="#"><span class="fab fa-twitter"></span></a></li>
+                                            <!-- <li class="mr-1"><a href="https://www.facebook.com/LunaCatamarans/"><span class="fab fa-facebook-f"></span></a></li> -->
+                                            <!-- <li class="mx-1"><a href="#"><span class="fab fa-twitter"></span></a></li>
                                             <li class="mx-1"><a href="#"><span class="fab fa-google-plus-g"></span></a></li>
-                                            <li class="mx-1"><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
+                                            <li class="mx-1"><a href="#"><span class="fab fa-linkedin-in"></span></a></li> -->
                                         </ul>
                                     </div>
                                 </div>
@@ -122,16 +123,16 @@
 
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ml-lg-auto text-right">
-                                <li class="nav-item active">
+                                <li class="nav-item ">
                                     <a class="nav-link" href="index.html">Home
-                                        <span class="sr-only">(current)</span>
+                                        
                                     </a>
                                 </li>
                                 <!-- <li class="nav-item">
                                     <a class="nav-link" href="about.html">About</a>
                                 </li> -->
                                 <li class="nav-item">
-                                    <a class="nav-link" href="purchase.html">Purchase</a>
+                                    <a class="nav-link active" href="purchase.html">Purchase</a>
                                 </li>
                                 <!-- <li class="nav-item">
                                     <a class="nav-link" href="price.html">360* Visit</a>
@@ -141,6 +142,7 @@
                                 </li> -->
                                 <li class="nav-item">
                                     <a class="nav-link" href="fff.html">Charter</a>
+                                    <span class="sr-only">(current)</span>
                                 </li>
                                
                                 <li class="nav-item">
@@ -178,7 +180,7 @@
                 <img src="images/gp-4.jpeg">
             </div>
         </div>
-
+    </div>
         <footer class="w3l-footer-66">
             <section class="footer-inner-main">
               <div class="footer-hny-grids py-5">
@@ -223,16 +225,16 @@
                            </div></p>
                           <div class="columns-2">
                             <ul class="social">
-                              <li><a href="#facebook"><span class="fa fa-facebook" aria-hidden="true"></span></a>
-                              </li>
-                              <li><a href="#linkedin"><span class="fa fa-linkedin" aria-hidden="true"></span></a>
+                               <li><a href="https://www.facebook.com/LunaCatamarans/"><span class="fa fa-facebook" aria-hidden="true"></span></a>
+                              </li> 
+                               <!-- <li><a href="#linkedin"><span class="fa fa-linkedin" aria-hidden="true"></span></a>
                               </li>
                               <li><a href="#twitter"><span class="fa fa-twitter" aria-hidden="true"></span></a>
                               </li>
                               <li><a href="#google"><span class="fa fa-google-plus" aria-hidden="true"></span></a>
-                              </li>
-                              <li><a href="#github"><span class="fa fa-youtube" aria-hidden="true"></span></a>
-                              </li>
+                              </li>  -->
+                              <li><a href="https://www.youtube.com/watch?v=FZkh6_n1Aoc"><span class="fa fa-youtube" aria-hidden="true"></span></a>
+                              </li> 
                             </ul>
                           </div>
                         </div>
@@ -245,9 +247,9 @@
                               </li>
                               <li><a href="services.html"><span class="fa fa-angle-double-right mr-2"></span> contact us</a>
                               </li>
-                              <li><a href="#"><span class="fa fa-angle-double-right mr-2"></span> Youtube</a>
+                              <li><a href="https://www.youtube.com/watch?v=FZkh6_n1Aoc"><span class="fa fa-angle-double-right mr-2"></span> Youtube</a>
                               </li>
-                              <li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>Facebook</a>
+                              <li><a href="https://www.facebook.com/LunaCatamarans/"><span class="fa fa-angle-double-right mr-2"></span>Facebook</a>
                               </li>
                             </ul>
                            </div>
