--- a/booknow.html
+++ b/booknow.html
@@ -195,14 +195,14 @@
                             <div class="col-lg-7 top-content-right">
                                 <div class="row">
                                     <div class="col-md-6 callnumber text-left">
-                                        <h6>Call Us : <span>1234567890</span></h6>
+                                        <h6>Call Us : <span>+351 915 828 245</span></h6>
                                     </div>
                                     <div class="col-md-6 top-social-icons p-0">
                                         <ul class="social-icons d-flex justify-content-end">
-                                            <li class="mr-1"><a href="#"><span class="fab fa-facebook-f"></span></a></li>
+                                            <!-- <li class="mr-1"><a href="#"><span class="fab fa-facebook-f"></span></a></li>
                                             <li class="mx-1"><a href="#"><span class="fab fa-twitter"></span></a></li>
                                             <li class="mx-1"><a href="#"><span class="fab fa-google-plus-g"></span></a></li>
-                                            <li class="mx-1"><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
+                                            <li class="mx-1"><a href="#"><span class="fab fa-linkedin-in"></span></a></li> -->
                                         </ul>
                                     </div>
                                 </div>
@@ -227,9 +227,9 @@
 
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ml-lg-auto text-right">
-                                <li class="nav-item active">
+                                <li class="nav-item ">
                                     <a class="nav-link" href="index.html">Home
-                                        <span class="sr-only">(current)</span>
+                                      
                                     </a>
                                 </li>
                                 <!-- <li class="nav-item">
@@ -279,7 +279,7 @@
         <form action="#" method="post">  
           <input type="text" name="Name" placeholder="Your-Name" required="">
           <input type="email" class="email" name="Email" placeholder="email@company.com" required="">
-          <input type="text" name="text" value="Booking" required="">
+          <input type="text" name="text" value="Catamaran Charter in Canary Islands" required="">
           <textarea name="Message" placeholder="Your-Message" required=""></textarea>
           <div class="read mt-3">
             <a href="#">Submit <span class="btn ml-2"><i class="fas fa-arrow-right" aria-hidden="true"></i></span></a>
@@ -351,15 +351,9 @@ info@localhost</a></p>
                    </div></p>
                   <div class="columns-2">
                     <ul class="social">
-                      <li><a href="#facebook"><span class="fa fa-facebook" aria-hidden="true"></span></a>
+                      <li><a href="https://www.facebook.com/LunaCatamarans/"><span class="fa fa-facebook" aria-hidden="true"></span></a>
                       </li>
-                      <li><a href="#linkedin"><span class="fa fa-linkedin" aria-hidden="true"></span></a>
-                      </li>
-                      <li><a href="#twitter"><span class="fa fa-twitter" aria-hidden="true"></span></a>
-                      </li>
-                      <li><a href="#google"><span class="fa fa-google-plus" aria-hidden="true"></span></a>
-                      </li>
-                      <li><a href="#github"><span class="fa fa-youtube" aria-hidden="true"></span></a>
+                      <li><a href="https://www.youtube.com/watch?v=FZkh6_n1Aoc"><span class="fa fa-youtube" aria-hidden="true"></span></a>
                       </li>
                     </ul>
                   </div>
@@ -373,9 +367,9 @@ info@localhost</a></p>
                       </li>
                       <li><a href="services.html"><span class="fa fa-angle-double-right mr-2"></span> contact us</a>
                       </li>
-                      <li><a href="#"><span class="fa fa-angle-double-right mr-2"></span> Youtube</a>
+                      <li><a href="https://www.youtube.com/watch?v=FZkh6_n1Aoc"><span class="fa fa-angle-double-right mr-2"></span> Youtube</a>
                       </li>
-                      <li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>Facebook</a>
+                      <li><a href="https://www.facebook.com/LunaCatamarans/"><span class="fa fa-angle-double-right mr-2"></span>Facebook</a>
                       </li>
                     </ul>
                    </div>
