--- a/db.html
+++ b/db.html
@@ -1,23 +1,16 @@
-<style>
-  .gradient {
-    position: relative;
+* {padding:0;margin:0;box-sizing:border-box;}
+#video {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	height: 0;
 }
-.gradient:after {
-   
-    color:#000;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
+#video iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
-.gradient h2 {
-    color: #117FB2;
-    -webkit-mask-box-image: -webkit-gradient(linear,
-                left top, left bottom,
-                color-stop(20%,rgba(0,0,0,1)),
-                color-stop(100%,rgba(0,0,0,0)));
-}
-</style>
-<div class="gradient">
-  <h2>Hello</h2>
+<div id="video">
+		<iframe width="100%" height="100%" src="https://www.youtube.com/embed/zWAiQJvwb8Q?  autoplay=1&loop=1&controls=0&rel=0&showinfo=0&playlist=zWAiQJvwb8Q&modestbranding=1" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 </div>
