--- a/fff.html
+++ b/fff.html
@@ -306,12 +306,12 @@
     
   <div class="row mt-5" style="background-image: url('images/bn.jpeg');">
       <div class="col-6  text-left mt-4 pl-0">
-          <div class="about-right-w3layouts mt-5">
+          <div class="about-right-w3layouts  video-height mt-5">
               <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wugnQcoFGM8?autoplay=1&mute=1&playlist=wugnQcoFGM8&loop=1&controls=0"></iframe>
           </div>
       </div>
       <div class="col-6 zoomimg-center text-right">
-         <img src="images/madeira.jpeg" style="width: 600px;height: 476px;">
+         <img src="images/madeira.jpeg"  class="abcde">
       </div>
   </div>
   <center><a href="booknow-2.html" class="btn btn-primary mt-1" target="_blank" style="color: white;">Book Now</a></center>
