--- a/Cont.html
+++ b/Cont.html
@@ -280,7 +280,7 @@
         <form action="#" method="post">  
           <input type="text" name="Name" placeholder="Your-Name" required="">
           <input type="email" class="email" name="Email" placeholder="email@company.com" required="">
-          <input type="text" name="text" placeholder="LUNA 48 ER POWER CAT" required="">
+          <input type="text" name="text" placeholder="LUNA 47 ER POWER CAT" required="">
           <textarea name="Message" placeholder="Your-Message" required=""></textarea>
           <div class="read mt-3">
             <a href="#">Submit <span class="btn ml-2"><i class="fas fa-arrow-right" aria-hidden="true"></i></span></a>
@@ -294,7 +294,7 @@
         </div>
         <div class="address address-mdl">
           <h5>Phones:</h5>
-          <p><span class="fa fa-phone"></span> +385993518766</p>
+          <p><span class="fa fa-phone"></span> +351 915 828 245</p>
           
         </div>
         <div class="address">
@@ -343,7 +343,7 @@ info@localhost</a></p>
                        Kresimirova 147, Vranjic, Croatia, 2121</a>
                       </li>
                       <li><a href="#"><span class="fa fa-angle-double-right mr-2"></span> 
-                    +385993518766
+                    +351 915 828 245
                      </a>
                       </li>
                       <li><a href="#"><span class="fa fa-angle-double-right mr-2"></span> info@localhost</a>
