--- a/booknow-4.html
+++ b/booknow-4.html
@@ -293,7 +293,7 @@
         </div>
         <div class="address address-mdl">
           <h5>Phones:</h5>
-          <p><span class="fa fa-phone"></span> +385993518766</p>
+          <p><span class="fa fa-phone"></span> +351 915 828 245</p>
           
         </div>
         <div class="address">
@@ -342,7 +342,7 @@ info@localhost</a></p>
                        Kresimirova 147, Vranjic, Croatia, 2121</a>
                       </li>
                       <li><a href="#"><span class="fa fa-angle-double-right mr-2"></span> 
-                    +385993518766
+                    +351 915 828 245
                      </a>
                       </li>
                       <li><a href="#"><span class="fa fa-angle-double-right mr-2"></span> info@localhost</a>
