--- a/fff.html
+++ b/fff.html
@@ -155,7 +155,7 @@
         <!-- main image slider container -->
         <div class="slide-window">
             <div class="slide-wrapper" style="width: 300%;">
-                <div class="slide">
+                <div class="slide slide1">
                     <div class="slide-caption">
                         <p>The right choice</p>
                         <h3>Propel <span>yourself</span> into the future.</h3>
@@ -209,7 +209,7 @@
                     <div class="top-head-w3-agile text-left">
                         <div class="row top-content-info-wthree">
                             <div class="col-lg-5 top-content-left">
-                                <h6>Have any Quastions?</h6>
+                                <h6>Have any Questions?</h6>
                             </div>
                             <div class="col-lg-7 top-content-right">
                                 <div class="row">
