--- a/purchase.html
+++ b/purchase.html
@@ -253,7 +253,7 @@ bottom:0;
                             <!-- <li class="nav-item">
                                 <a class="nav-link" href="about.html">About</a>
                             </li> -->
-                            <li class="nav-item">
+                            <li class="nav-item active">
                                 <a class="nav-link" href="purchase.html">Purchase</a>
                             </li>
                             <!-- <li class="nav-item">
@@ -264,7 +264,7 @@ bottom:0;
                             </li> -->
                             <li class="nav-item">
                                 <a class="nav-link active" href="fff.html">Charter</a>
-                                <span class="sr-only">(current)</span>
+                               
                             </li>
                             <!-- <li class="nav-item">
                                 <a class="nav-link" href="price.html">Management</a>
