--- a/Cont.html
+++ b/Cont.html
@@ -250,7 +250,7 @@
                                 <!-- <li class="nav-item">
                                     <a class="nav-link" href="price.html">Management</a>
                                 </li> -->
-                                <li class="nav-item">
+                                <li class="nav-item active ">
                                     <a class="nav-link active" href="Cont.html">Contact</a>
                                    
                                 </li>
