--- a/fff.html
+++ b/fff.html
@@ -155,7 +155,7 @@
         <!-- main image slider container -->
         <div class="slide-window">
             <div class="slide-wrapper" style="width: 300%;">
-                <div class="slide slide1">
+                <div class="slide">
                     <div class="slide-caption">
                         <p>The right choice</p>
                         <h3>Propel <span>yourself</span> into the future.</h3>
