--- a/fff.html
+++ b/fff.html
@@ -270,7 +270,7 @@
                                     <a class="nav-link" href="price.html">Management</a>
                                 </li> -->
                                 <li class="nav-item">
-                                    <a class="nav-link" href="Cont.html">Contact</a>
+                                    <a class="nav-link" href="headCont.html">Contact</a>
                                 </li>
 
                             </ul>
