--- a/Cont.html
+++ b/Cont.html
@@ -141,7 +141,7 @@
                         <p>The right choice</p>
                         <h3>Propel <span>yourself</span> into the future.</h3>
                         <div class="cont-btn">
-                            <a class="btn text-uppercase" href="contact.html">
+                            <a class="btn text-uppercase" href="headCont.html">
                             Contact</a>
                         </div>
 
@@ -152,7 +152,7 @@
                         <p>Ready to go</p>
                         <h3>Premium Worldwide <span>Logistics</span> Network </h3>
                         <div class="cont-btn">
-                            <a class="btn text-uppercase" href="contact.html">
+                            <a class="btn text-uppercase" href="headCont.html">
                             Contact</a>
                         </div>
 
@@ -163,7 +163,7 @@
                         <p>The right choice.</p>
                         <h3>Propel <span>yourself</span> into the future.</h3>
                         <div class="cont-btn">
-                            <a class="btn text-uppercase" href="contact.html">
+                            <a class="btn text-uppercase" href="headCont.html">
                             Contact</a>
                         </div>
 
@@ -190,7 +190,7 @@
                     <div class="top-head-w3-agile text-left">
                         <div class="row top-content-info-wthree">
                             <div class="col-lg-5 top-content-left">
-                                <h6>Have any Quastions?</h6>
+                                <h6>Have any Questions?</h6>
                             </div>
                             <div class="col-lg-7 top-content-right">
                                 <div class="row">
@@ -233,7 +233,7 @@
                                     </a>
                                 </li>
                                 <!-- <li class="nav-item">
-                                    <a class="nav-link" href="about.html">About</a>
+                                    <a class="nav-link" href="#">About</a>
                                 </li> -->
                                 <li class="nav-item">
                                     <a class="nav-link" href="purchase.html">Purchase</a>
@@ -251,7 +251,7 @@
                                     <a class="nav-link" href="price.html">Management</a>
                                 </li> -->
                                 <li class="nav-item active ">
-                                    <a class="nav-link active" href="Cont.html">Contact</a>
+                                    <a class="nav-link active" href="headCont.html">Contact</a>
                                    
                                 </li>
 
@@ -346,7 +346,7 @@ info@localhost</a></p>
                     +351 915 828 245
                      </a>
                       </li>
-                      <li><a href="#"><span class="fa fa-angle-double-right mr-2"></span> info@localhost</a>
+                      <li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>lunacharters@luna-catamarans.com</a>
                       </li>
                     </ul>
                    </div></p>
@@ -370,9 +370,9 @@ info@localhost</a></p>
     <div class="mid-footer-gd sub-two-right">
 
                     <ul>
-                      <li><a href="about.html"><span class="fa fa-angle-double-right mr-2"></span> Team</a>
+                      <li><a href="#"><span class="fa fa-angle-double-right mr-2"></span> Team</a>
                       </li>
-                      <li><a href="services.html"><span class="fa fa-angle-double-right mr-2"></span> contact us</a>
+                      <li><a href="headCont.html"><span class="fa fa-angle-double-right mr-2"></span> contact us</a>
                       </li>
                       <li><a href="https://www.youtube.com/watch?v=FZkh6_n1Aoc"><span class="fa fa-angle-double-right mr-2"></span> Youtube</a>
                       </li>
