--- a/about.html
+++ b/about.html
@@ -39,12 +39,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <div class="top-head-w3-agile text-left">
                         <div class="row top-content-info-wthree">
                             <div class="col-lg-5 top-content-left">
-                                <h6>Have any Quastions?</h6>
+                                <h6>Have any Questions?</h6>
                             </div>
                             <div class="col-lg-7 top-content-right">
                                 <div class="row">
                                     <div class="col-md-6 callnumber text-left">
-                                        <h6>Call Us : <span>1234567890</span></h6>
+                                        <h6>Call Us : <span>+351 915 828 245</span></h6>
                                     </div>
                                     <div class="col-md-6 top-social-icons p-0">
                                         <ul class="social-icons d-flex justify-content-end">
@@ -82,7 +82,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     </a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="about.html">About</a>
+                                    <a class="nav-link" href="#">About</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -90,8 +90,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                         <i class="fas fa-angle-down"></i>
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="services.html">Services</a>
-                                        <a class="dropdown-item" href="services.html" title="">Services 1</a>
+                                        <a class="dropdown-item" href="headCont.html">Services</a>
+                                        <a class="dropdown-item" href="headCont.html" title="">Services 1</a>
 
                                         <a class="dropdown-item" href="single.html" title="">Single Page</a>
                                     </div>
@@ -100,7 +100,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <a class="nav-link" href="price.html">Pricing</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact</a>
+                                    <a class="nav-link" href="headCont.html">Contact</a>
                                 </li>
 
                             </ul>
@@ -404,16 +404,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <a class="active" href="index.html">Home</a>
                             </li>
                             <li>
-                                <a href="about.html">About</a>
+                                <a href="#">About</a>
                             </li>
                             <li>
-                                <a href="services.html">Services</a>
+                                <a href="headCont.html">Services</a>
                             </li>
                             <li>
                                 <a href="price.html">Pricing</a>
                             </li>
                             <li>
-                                <a href="contact.html">Contact</a>
+                                <a href="headCont.html">Contact</a>
                             </li>
                         </ul>
                         <ul class="social-icons d-flex justify-content-end mt-3">
