--- a/fff.html
+++ b/fff.html
@@ -160,7 +160,7 @@
                         <p>The right choice</p>
                         <h3>Propel <span>yourself</span> into the future.</h3>
                         <div class="cont-btn">
-                            <a class="btn text-uppercase" href="contact.html">
+                            <a class="btn text-uppercase" href="headCont.html">
                             Contact</a>
                         </div>
 
@@ -171,7 +171,7 @@
                         <p>Ready to go</p>
                         <h3>Premium Worldwide <span>Logistics</span> Network </h3>
                         <div class="cont-btn">
-                            <a class="btn text-uppercase" href="contact.html">
+                            <a class="btn text-uppercase" href="headCont.html">
                             Contact</a>
                         </div>
 
@@ -182,7 +182,7 @@
                         <p>The right choice.</p>
                         <h3>Propel <span>yourself</span> into the future.</h3>
                         <div class="cont-btn">
-                            <a class="btn text-uppercase" href="contact.html">
+                            <a class="btn text-uppercase" href="headCont.html">
                             Contact</a>
                         </div>
 
@@ -209,7 +209,7 @@
                     <div class="top-head-w3-agile text-left">
                         <div class="row top-content-info-wthree">
                             <div class="col-lg-5 top-content-left">
-                                <h6>Have any Questions?</h6>
+                                <h6>Have any Questions??</h6>
                             </div>
                             <div class="col-lg-7 top-content-right">
                                 <div class="row">
@@ -251,7 +251,7 @@
                                     </a>
                                 </li>
                                 <!-- <li class="nav-item">
-                                    <a class="nav-link" href="about.html">About</a>
+                                    <a class="nav-link" href="#">About</a>
                                 </li> -->
                                 <li class="nav-item">
                                     <a class="nav-link" href="purchase.html">Purchase</a>
@@ -270,7 +270,7 @@
                                     <a class="nav-link" href="price.html">Management</a>
                                 </li> -->
                                 <li class="nav-item">
-                                    <a class="nav-link" href="headCont.html">Contact</a>
+                                    <a class="nav-link" href="headheadCont.html">Contact</a>
                                 </li>
 
                             </ul>
@@ -430,7 +430,7 @@
                     +351 915 828 245
                      </a>
                       </li>
-                      <li><a href="#"><span class="fa fa-angle-double-right mr-2"></span> info@localhost</a>
+                      <li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>lunacharters@luna-catamarans.com</a>
                       </li>
                     </ul>
                    </div></p>
@@ -454,9 +454,9 @@
                  <div class="mid-footer-gd sub-two-right">
 
                     <ul>
-                      <li><a href="about.html"><span class="fa fa-angle-double-right mr-2"></span> Team</a>
+                      <li><a href="#"><span class="fa fa-angle-double-right mr-2"></span> Team</a>
                       </li>
-                      <li><a href="services.html"><span class="fa fa-angle-double-right mr-2"></span> contact us</a>
+                      <li><a href="headCont.html"><span class="fa fa-angle-double-right mr-2"></span> contact us</a>
                       </li>
                       <li><a href="https://www.youtube.com/watch?v=FZkh6_n1Aoc"><span class="fa fa-angle-double-right mr-2"></span> Youtube</a>
                       </li>
