--- a/headCont.html
+++ b/headCont.html
@@ -141,7 +141,7 @@
                         <p>The right choice</p>
                         <h3>Propel <span>yourself</span> into the future.</h3>
                         <div class="cont-btn">
-                            <a class="btn text-uppercase" href="contact.html">
+                            <a class="btn text-uppercase" href="headCont.html">
                             Contact</a>
                         </div>
 
@@ -152,7 +152,7 @@
                         <p>Ready to go</p>
                         <h3>Premium Worldwide <span>Logistics</span> Network </h3>
                         <div class="cont-btn">
-                            <a class="btn text-uppercase" href="contact.html">
+                            <a class="btn text-uppercase" href="headCont.html">
                             Contact</a>
                         </div>
 
@@ -163,7 +163,7 @@
                         <p>The right choice.</p>
                         <h3>Propel <span>yourself</span> into the future.</h3>
                         <div class="cont-btn">
-                            <a class="btn text-uppercase" href="contact.html">
+                            <a class="btn text-uppercase" href="headCont.html">
                             Contact</a>
                         </div>
 
@@ -190,19 +190,19 @@
                     <div class="top-head-w3-agile text-left">
                         <div class="row top-content-info-wthree">
                             <div class="col-lg-5 top-content-left">
-                                <h6>Have any Quastions?</h6>
+                                <h6>Have any Questions?</h6>
                             </div>
                             <div class="col-lg-7 top-content-right">
                                 <div class="row">
                                     <div class="col-md-6 callnumber text-left">
-                                        <h6>Call Us : <span>1234567890</span></h6>
+                                        <h6>Call Us : <span>+351 915 828 245</span></h6>
                                     </div>
                                     <div class="col-md-6 top-social-icons p-0">
                                         <ul class="social-icons d-flex justify-content-end">
-                                            <li class="mr-1"><a href="#"><span class="fab fa-facebook-f"></span></a></li>
+                                            <!-- <li class="mr-1"><a href="#"><span class="fab fa-facebook-f"></span></a></li>
                                             <li class="mx-1"><a href="#"><span class="fab fa-twitter"></span></a></li>
                                             <li class="mx-1"><a href="#"><span class="fab fa-google-plus-g"></span></a></li>
-                                            <li class="mx-1"><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
+                                            <li class="mx-1"><a href="#"><span class="fab fa-linkedin-in"></span></a></li> -->
                                         </ul>
                                     </div>
                                 </div>
@@ -233,7 +233,7 @@
                                     </a>
                                 </li>
                                 <!-- <li class="nav-item">
-                                    <a class="nav-link" href="about.html">About</a>
+                                    <a class="nav-link" href="#">About</a>
                                 </li> -->
                                 <li class="nav-item">
                                     <a class="nav-link" href="purchase.html">Purchase</a>
@@ -251,7 +251,7 @@
                                     <a class="nav-link" href="price.html">Management</a>
                                 </li> -->
                                 <li class="nav-item">
-                                    <a class="nav-link" href="headCont.html">Contact</a>
+                                    <a class="nav-link" href="headheadCont.html">Contact</a>
                                 </li>
 
                             </ul>
@@ -345,21 +345,21 @@ info@localhost</a></p>
                     +351 915 828 245
                      </a>
                       </li>
-                      <li><a href="#"><span class="fa fa-angle-double-right mr-2"></span> info@localhost</a>
+                      <li><a href="#"><span class="fa fa-angle-double-right mr-2"></span>lunacharters@luna-catamarans.com</a>
                       </li>
                     </ul>
                    </div></p>
                   <div class="columns-2">
                     <ul class="social">
-                      <li><a href="#facebook"><span class="fa fa-facebook" aria-hidden="true"></span></a>
+                      <li><a href="https://www.facebook.com/LunaCatamarans/"><span class="fa fa-facebook" aria-hidden="true"></span></a>
                       </li>
-                      <li><a href="#linkedin"><span class="fa fa-linkedin" aria-hidden="true"></span></a>
+                      <!-- <li><a href="#linkedin"><span class="fa fa-linkedin" aria-hidden="true"></span></a>
                       </li>
                       <li><a href="#twitter"><span class="fa fa-twitter" aria-hidden="true"></span></a>
                       </li>
                       <li><a href="#google"><span class="fa fa-google-plus" aria-hidden="true"></span></a>
-                      </li>
-                      <li><a href="#github"><span class="fa fa-youtube" aria-hidden="true"></span></a>
+                      </li> -->
+                      <li><a href="https://www.youtube.com/watch?v=FZkh6_n1Aoc"><span class="fa fa-youtube" aria-hidden="true"></span></a>
                       </li>
                     </ul>
                   </div>
@@ -369,9 +369,9 @@ info@localhost</a></p>
     <div class="mid-footer-gd sub-two-right">
 
                     <ul>
-                      <li><a href="about.html"><span class="fa fa-angle-double-right mr-2"></span> Team</a>
+                      <li><a href="#"><span class="fa fa-angle-double-right mr-2"></span> Team</a>
                       </li>
-                      <li><a href="services.html"><span class="fa fa-angle-double-right mr-2"></span> contact us</a>
+                      <li><a href="headCont.html"><span class="fa fa-angle-double-right mr-2"></span> contact us</a>
                       </li>
                       <li><a href="#"><span class="fa fa-angle-double-right mr-2"></span> Youtube</a>
                       </li>
