--- a/purchase.html
+++ b/purchase.html
@@ -295,7 +295,7 @@ bottom:0;
                 <div class="card-body">
                   <h4 class="card-title">LUNA 47er POWER Cat</h4>
                  
-                  <a href="cont.html" class="btn btn-primary stretched-link" target="_blank">Price on Request</a>
+                  <a href="Cont.html" class="btn btn-primary stretched-link" target="_blank">Price on Request</a>
                 </div>
             </div>
         </div>
