--- a/fff.html
+++ b/fff.html
@@ -209,7 +209,7 @@
                     <div class="top-head-w3-agile text-left">
                         <div class="row top-content-info-wthree">
                             <div class="col-lg-5 top-content-left">
-                                <h6>Have any Questions??</h6>
+                                <h6>Have any Questions?</h6>
                             </div>
                             <div class="col-lg-7 top-content-right">
                                 <div class="row">
