--- a/headCont.html
+++ b/headCont.html
@@ -251,7 +251,7 @@
                                     <a class="nav-link" href="price.html">Management</a>
                                 </li> -->
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="headheadCont.html">Contact</a>
+                                    <a class="nav-link" href="headCont.html">Contact</a>
                                 </li>
 
                             </ul>
