--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ transform:translate(-50%,-50%);
                     <li><a href="index.html">Home</a></li>
                     <li><a href="purchase.html">Purchase</a></li>
                     <li><a href="fff.html">Charter</a></li>
-                    <li><a href="headheadCont.html">Contact</a></li>
+                    <li><a href="headCont.html">Contact</a></li>
                 </ul>
             </div>
             <div class="banner-text">
