adding content to nav menu

--- a/index.html
+++ b/index.html
@@ -247,8 +247,10 @@ transform:translate(-50%,-50%);
                 <ul class="menu-area">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="purchase.html">Purchase</a></li>
+                    <li><a href="360degree.html">360*</a></li>
                     <li><a href="fff.html">Charter</a></li>
                     <li><a href="headCont.html">Contact</a></li>
+                    
                 </ul>
             </div>
             <div class="banner-text">
