--- a/Cont.html
+++ b/Cont.html
@@ -238,6 +238,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="purchase.html">Purchase</a>
                                 </li>
+                                <li class="nav-item">
+                                  <a class="nav-link" href="360degree.html">360*</a>
+                              </li>
                                 <!-- <li class="nav-item">
                                     <a class="nav-link" href="price.html">360* Visit</a>
                                 </li> -->
