--- a/booknow-6.html
+++ b/booknow-6.html
@@ -247,6 +247,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="fff.html">Charter</a>
                                 </li>
+                                <li class="nav-item">
+                                  <a class="nav-link" href="360degree.html">360*</a>
+                              </li>
                                 <!-- <li class="nav-item">
                                     <a class="nav-link" href="price.html">Management</a>
                                 </li> -->
