--- a/purchase.html
+++ b/purchase.html
@@ -256,6 +256,9 @@ bottom:0;
                             <li class="nav-item active">
                                 <a class="nav-link" href="purchase.html">Purchase</a>
                             </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="360degree.html">360*</a>
+                          </li>
                             <!-- <li class="nav-item">
                                 <a class="nav-link" href="price.html">360* Visit</a>
                             </li> -->
