--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="zxx">
 
 <head>
-    <title>Shipment Transport Category Bootstrap responsive Web Template | Home :: w3layouts</title>
+    <title>Luna Charter</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
@@ -247,10 +247,10 @@ transform:translate(-50%,-50%);
                 <ul class="menu-area">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="purchase.html">Purchase</a></li>
-                    <li><a href="360degree.html">360*</a></li>
+                    <li><a href="360degree.html" target="_blank">360*</a></li>
                     <li><a href="fff.html">Charter</a></li>
                     <li><a href="headCont.html">Contact</a></li>
-                    
+                    <li><button class="btn btn-danger"><a href="https://www.luna-catamarans.com/" target="_blank">Visit Luna Catamarans</a></button></li>
                 </ul>
             </div>
             <div class="banner-text">
