--- a/fff.html
+++ b/fff.html
@@ -3,7 +3,7 @@
 
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <title>Shipment Transport Category Bootstrap responsive Web Template | Home :: w3layouts</title>
+        <title>Luna Charter</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
@@ -257,7 +257,7 @@
                                     <a class="nav-link" href="purchase.html">Purchase</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="360degree.html">360*</a>
+                                    <a class="nav-link" target="_blank" href="360degree.html">360*</a>
                                 </li>
                                 <!-- <li class="nav-item">
                                     <a class="nav-link" href="price.html">360* Visit</a>
@@ -279,8 +279,7 @@
                             </ul>
 
                             <div class="log-in">
-                                <a class="btn text-uppercase" href="#" data-toggle="modal" data-target="#exampleModalCenter">
-                                    Sign In</a>
+                                <li><button class="btn "><a href="https://www.luna-catamarans.com/" target="_blank">Visit Luna Catamarans</a></button></li>
                             </div>
                         </div>
 
