--- a/headCont.html
+++ b/headCont.html
@@ -3,7 +3,7 @@
 <html lang="zxx">
 
 <head>
-    <title>Shipment Transport Category Bootstrap responsive Web Template | Home :: w3layouts</title>
+    <title>Luna Charter</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
@@ -239,7 +239,7 @@
                                     <a class="nav-link" href="purchase.html">Purchase</a>
                                 </li>
                                 <li class="nav-item">
-                                  <a class="nav-link" href="360degree.html">360*</a>
+                                  <a class="nav-link" target="_blank" href="360degree.html">360*</a>
                               </li>
                                 <!-- <li class="nav-item">
                                     <a class="nav-link" href="price.html">360* Visit</a>
@@ -260,8 +260,7 @@
                             </ul>
 
                             <div class="log-in">
-                                <a class="btn text-uppercase" href="#" data-toggle="modal" data-target="#exampleModalCenter">
-                                    Sign In</a>
+                              <li><button class="btn "><a href="https://www.luna-catamarans.com/" target="_blank">Visit Luna Catamarans</a></button></li>
                             </div>
                         </div>
 
@@ -302,8 +301,8 @@
         <div class="address">
           <h5>Email:</h5>
           <p><span class="fa fa-envelope"></span> <a href="info@localhost">
-info@localhost</a></p>
-          <p><span class="fa fa-globe"></span> <a href="mailto:website@example.com">website@example.com</a></p>
+            lunacharters@luna-catamarans.com</a></p>
+          
         </div>
       </div>
     </div>
