--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ transform:translate(-50%,-50%);
                     <li><a href="360degree.html" target="_blank">360*</a></li>
                     <li><a href="fff.html">Charter</a></li>
                     <li><a href="headCont.html">Contact</a></li>
-                    <li><button class="btn btn-danger"><a href="https://www.luna-catamarans.com/" target="_blank">Visit Luna Catamarans</a></button></li>
+                    <li><button class="btn btn-danger"><a href="https://www.luna-catamarans.com/" target="_blank">VISIT OUR BOATYARDs</a></button></li>
                 </ul>
             </div>
             <div class="banner-text">
