done with changes

--- a/headCont.html
+++ b/headCont.html
@@ -260,7 +260,7 @@
                             </ul>
 
                             <div class="log-in">
-                              <li><button class="btn "><a href="https://www.luna-catamarans.com/" target="_blank">VISIT OUR BOATYARDs</a></button></li>
+                              <li><button class="btn "><a href="https://www.luna-catamarans.com/" target="_blank">Visit Luna Catamarans</a></button></li>
                             </div>
                         </div>
 
