--- a/fff.html
+++ b/fff.html
@@ -279,7 +279,7 @@
                             </ul>
 
                             <div class="log-in">
-                                <li><button class="btn "><a href="https://www.luna-catamarans.com/" target="_blank">VISIT OUR BOATYARDs</a></button></li>
+                                <li><button class="btn "><a href="https://www.luna-catamarans.com/" target="_blank">Visit Luna Catamarans</a></button></li>
                             </div>
                         </div>
 
